# colony-sim

./: .gitignore  CMakeLists.txt  README.md
scripts/: buildcmake.bat
src/: CMakeLists.txt  main.cpp
src/ECS/: Component.hpp  ECS.hpp  Entity.cpp  Entity.hpp  World.cpp  World.hpp
src/Renderer/: Renderer.cpp  Renderer.h
src/Renderer/Types/: Vertex.h
src/Utils/: Console.cpp  Console.hpp  Logging.cpp  Logging.hpp  Time.cpp  Time.hpp  Types.hpp
src/Vulkan/Core/: DebugHelper.cpp  DebugHelper.h  Device.cpp  Device.h  Instance.cpp  Instance.h  Swapchain.cpp  Swapchain.h  Utils.h  Window.cpp
src/Vulkan/Memory/: Buffer.cpp  Buffer.h  IndexBuffer.h  UniformBuffer.h  VertexBuffer.h
src/Vulkan/Pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  PipelineDescriptor.cpp  PipelineDescriptor.h
